--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Overview: This application is designed to streamline document management and information retrieval on construction sites, addressing the challenge of accessing necessary details without manually searching through documents. It leverages a chatbot interface to facilitate easy communication and information exchange.
+        
       </h2>
     </div>
   </div>
@@ -88,7 +88,9 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology. Specifically we are building an AI chatbot mobile app, which delivers actionable insights from construction documents, containing all forms of data (i.e., text, voice, image, and video), to facilitate real-time communication across project stakeholders.
+            SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology. 
+            Overview: This application is designed to streamline document management and information retrieval on construction sites, addressing the challenge of accessing necessary details without manually searching through documents. It leverages a chatbot interface to facilitate easy communication and information exchange,  which delivers actionable insights from construction documents, containing all forms of data (i.e., text, voice, image, and video), to facilitate real-time communication across project stakeholders.
+      
           </p>
         </div>
       </div>
