--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        
+        SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology.
       </h2>
     </div>
   </div>
@@ -85,11 +85,10 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Overview</h2>
         <div class="content has-text-justified">
           <p>
-            SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology. 
-            Overview: This application is designed to streamline document management and information retrieval on construction sites, addressing the challenge of accessing necessary details without manually searching through documents. It leverages a chatbot interface to facilitate easy communication and information exchange,  which delivers actionable insights from construction documents, containing all forms of data (i.e., text, voice, image, and video), to facilitate real-time communication across project stakeholders.
+            This application is designed to streamline document management and information retrieval on construction sites, addressing the challenge of accessing necessary details without manually searching through documents. It leverages a chatbot interface to facilitate easy communication and information exchange,  which delivers actionable insights from construction documents, containing all forms of data (i.e., text, voice, image, and video), to facilitate real-time communication across project stakeholders.
       
           </p>
         </div>
