--- a/index.html
+++ b/index.html
@@ -98,7 +98,37 @@
 </section>
 <!-- End paper abstract -->
 
+<!--BibTex citation -->
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">BibTeX</h2>
+      <pre><code>@incollection{jung_chatbot,
+author = {$^{*}$\textbf{Yoonhwa Jung} and Mani Golparvar-Fard },
+title = {Voice-assisted AI-Chatbot for Construction: Speech-to-Text Deep Learning Transformer trained with Synthetic Datasets},
+  booktitle={Computing in Civil Engineering 2024},
+  year={2024}}</code></pre>
+    </div>
+</section>
+<!--End BibTex citation -->
 
+
+  <footer class="footer">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-8">
+        <div class="content">
+
+          <p>
+            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
+            You are free to borrow the source code of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
+            Commons Attribution-ShareAlike 4.0 International License</a>.
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
   </body>
   </html>
