--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video>
-      <h2 class="subtitle has-text-centered">
+      <h3 class="subtitle has-text-centered">
         SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology.
-      </h2>
+      </h3>
     </div>
   </div>
 </section>
@@ -103,7 +103,7 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@incollection{jung_chatbot,
-author = {$^{*}$\textbf{Yoonhwa Jung} and Mani Golparvar-Fard },
+author = {Yoonhwa Jung and Mani Golparvar-Fard },
 title = {Voice-assisted AI-Chatbot for Construction: Speech-to-Text Deep Learning Transformer trained with Synthetic Datasets},
   booktitle={Computing in Civil Engineering 2024},
   year={2024}}</code></pre>
