--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video>
-      <h3 class="subtitle has-text-centered">
-        SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology.
-      </h3>
+      <h2 class="subtitle has-text-centered">
+        <p style="font-size: 15px">SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology.<\p>
+      </h2>
     </div>
   </div>
 </section>
