--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        <p style="font-size: 15px">SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology.</p>
+        <p style="font-size: 15px">Teaser video: SiteDialogue is to revolutionize the design/engineering/construction industry with cutting-edge AI technology.</p>
       </h2>
     </div>
   </div>
