--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
+      <h2 class="title">Contact Us</h2>
+      <pre><code>illigpt.dev@gmail.com</code></pre>
+    </div>
+</section>
+<!--End BibTex citation -->
+  
+  
+<!--BibTex citation -->
+  <section class="section" id="BibTeX">
+    <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@incollection{jung_chatbot,
 author = {Yoonhwa Jung and Mani Golparvar-Fard },
