--- a/static/privacy/privacypolicy.html
+++ b/static/privacy/privacypolicy.html
@@ -262,7 +262,7 @@
                 </span>
                 </span>
             </div>
-            <div style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text"><strong>Personal Information Provided by You.</strong> The personal information that we collect depends on the context of your interactions with us and the Services, the choices you make, and the products and features you use. The personal information we collect may include the following:<span style="font-size: 15px;"><span data-custom-class="body_text"><bdt class="forloop-component"></bdt></span></span>
+            <div style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text"><strong>Personal Information Provided by You.</strong> The personal information that we collect depends on the context of your interactions with us twhen you contact us via email. We collect, store and process it by our cloud storage provider (Amazon.com, Inc.). We use such information to respond effectively to your inquiry, fulfill your requests, send you communications that you request and perform the requested services. The personal information we collect may include the following:<span style="font-size: 15px;"><span data-custom-class="body_text"><bdt class="forloop-component"></bdt></span></span>
                 </span>
                 </span>
                 </span>
@@ -304,7 +304,7 @@
                 </span>
                 </span>
             </div>
-            <div style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text"><strong>Social Media Login Data. </strong>We may provide you with the option to register with us using your existing social media account details, like your Google, Apple, or other social media account. If you choose to register in this way, we will collect certain profile information about you from the social media provider, as described in the section called <bdt class="block-component"></bdt>"<bdt class="statement-end-if-in-editor"></bdt><span style="font-size: 15px;"><span data-custom-class="body_text"><span style="font-size: 15px;"><span style="color: rgb(0, 58, 250);"><a data-custom-class="link" href="#sociallogins">HOW DO WE HANDLE YOUR SOCIAL LOGINS?</a></span></span>
+            <div style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text"><strong>Social Media Login Data. </strong>We provide you with the option to register with us using your existing social media account details (your Google or Apple account credentials). If you choose to register in this way, we will collect certain profile information about you from the social media provider, as described in the section called <bdt class="block-component"></bdt>"<bdt class="statement-end-if-in-editor"></bdt><span style="font-size: 15px;"><span data-custom-class="body_text"><span style="font-size: 15px;"><span style="color: rgb(0, 58, 250);"><a data-custom-class="link" href="#sociallogins">HOW DO WE HANDLE YOUR SOCIAL LOGINS?</a></span></span>
                 </span>
                 </span>
                 <bdt class="block-component"></bdt>"
@@ -328,9 +328,31 @@
                     </bdt>
                 </div>
                 <ul>
-                    <li data-custom-class="body_text" style="line-height: 1.5;"><span style="font-size: 15px;"><span data-custom-class="body_text"><em>Mobile Device Access.</em> We may request access or permission to certain features from your mobile device, including your mobile device's <bdt class="forloop-component"></bdt><bdt class="question">camera</bdt>, <bdt class="forloop-component"></bdt><bdt class="question">microphone</bdt>, <bdt class="forloop-component"></bdt><bdt class="question">storage</bdt>, <bdt class="forloop-component"></bdt>and other features. If you wish to change our access or permissions, you may do so in your device's settings.<bdt class="statement-end-if-in-editor"></bdt></span></span>
+                    <li data-custom-class="body_text" style="line-height: 1.5;"><span style="font-size: 15px;"><span data-custom-class="body_text"><em>Mobile Device Access.</em> We may request access or permission to certain features from your mobile device, including your mobile device's <bdt class="forloop-component"></bdt><bdt class="question">camera</bdt>, <bdt class="forloop-component"></bdt><bdt class="question">microphone</bdt>, <bdt class="forloop-component"></bdt><bdt class="question">storage</bdt>, <bdt class="forloop-component"></bdt>and other features that you attach and send to the Services. If you wish to change our access or permissions, you may do so in your device's settings.<bdt class="statement-end-if-in-editor"></bdt></span></span>
                     </li>
+                    
                 </ul>
+            <div style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text"><strong>User Content. </strong>When you use the Services, you may upload text, text files, and graphics in specified formats ("Input Content"). This Input Content can be used to create new, original content using artificial intelligence ("Output Content"). Collectively, both Input and Output Content are referred to as "User Content." Utilizing User Content is solely at your own risk. You are responsible for all risks and must ensure your use of User Content complies with relevant laws. We use a third-party service provider, OpenAI, L.L.C., to process and create AI-generated User Content.<bdt class="block-component"></bdt><bdt class="statement-end-if-in-editor"></bdt>
+                <bdt class="block-component"></bdt>
+                <bdt class="statement-end-if-in-editor"></bdt> </span>
+                </span>
+                </span>
+            </div>
+            <div style="line-height: 1.5;"><br></div>
+            <div style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text"><strong>Feedback Data:  </strong>Where applicable, we will collect your Feedback. This might arise if, for example, in a given conversation with SiteDialogue, you rate an Output Content using the five-star icon.  <bdt class="block-component"></bdt><bdt class="statement-end-if-in-editor"></bdt>
+                <bdt class="block-component"></bdt>
+                <bdt class="statement-end-if-in-editor"></bdt> </span>
+                </span>
+                </span>
+            </div>
+            <div style="line-height: 1.5;"><br></div>
+            <div style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text"><span style="font-size: 15px;"><bdt class="statement-end-if-in-editor"><bdt class="statement-end-if-in-editor"></bdt></bdt></span></span>
+                </span>
+                </span>
+                <bdt class="block-component">
+                    <bdt class="block-component"></bdt>
+                </bdt>
+            </div>
                 <div style="line-height: 1.5;">
                     <bdt class="block-component"><span style="font-size: 15px;"><span data-custom-class="body_text"></bdt></span></span>
                         </li>
@@ -358,7 +380,7 @@
                                         rel="noopener noreferrer" target="_blank"><span style="color: rgb(0, 58, 250); font-size: 15px;"><span data-custom-class="body_text">Google API Services User Data Policy</span></span></a><span style="font-size: 15px;"><span data-custom-class="body_text">, including the </span></span>
                                     <a
                                         data-custom-class="link" href="https://developers.google.com/terms/api-services-user-data-policy#limited-use" rel="noopener noreferrer" target="_blank"><span style="color: rgb(0, 58, 250); font-size: 15px;"><span data-custom-class="body_text">Limited Use requirements</span></span>
-                                        </a><span style="font-size: 15px;"><span data-custom-class="body_text">.</span><br></span>
+                                        </a><span style="font-size: 15px;"><span data-custom-class="body_text">. </span><br></span>
                                 </div>
                                 <div style="line-height: 1.5;"><span style="font-size: 15px;"><strong><span data-custom-class="heading_2"><h3>Apple API</h3></span></strong>
                                     </span><span style="font-size: 15px;"><span data-custom-class="body_text">Our use of information received from Apple API will adhere to </span></span><a data-custom-class="link" href="https://https://www.apple.com/legal/privacy/data/en/sign-in-with-apple/"
@@ -1270,9 +1292,7 @@
                                                 <div style="line-height: 1.5;"><span data-custom-class="body_text"><bdt class="block-component"></bdt></span></li>
                                                     </ul>
                                                     <div style="line-height: 1.5;"><span data-custom-class="body_text"><bdt class="block-component"></bdt></span></div>
-                                                    <ul>
-                                                        <li data-custom-class="body_text" style="line-height: 1.5;"><span data-custom-class="body_text">Category <bdt class="block-component"></bdt>K<bdt class="else-block"></bdt> - <bdt class="question">As long as the user has an account with us</bdt><bdt class="statement-end-if-in-editor"></bdt></span></li>
-                                                    </ul>
+                                                    
                                                     <div style="line-height: 1.5;"><span data-custom-class="body_text"><bdt class="block-component"></bdt></span>
                                                         <bdt class="statement-end-if-in-editor"><span data-custom-class="body_text"></span></bdt>
                                                         </li>
