--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h2 class="title is-3">Overview</h2>
         <div class="content has-text-justified">
           <p>
-            This application is designed to streamline document management and information retrieval on construction sites, addressing the challenge of accessing necessary details without manually searching through documents. It leverages a chatbot interface to facilitate easy communication and information exchange,  which delivers actionable insights from construction documents, containing all forms of data (i.e., text, voice, image, and video), to facilitate real-time communication across project stakeholders.
+            This application is designed to streamline document management and information retrieval on construction sites, addressing the challenge of accessing necessary details without manually searching through documents. It leverages a chatbot interface to facilitate easy communication and information exchange,  which may deliver actionable insights from construction documents, decoding various forms of data (i.e., text, voice, image, and video).
       
           </p>
         </div>
