--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 
   <title>SiteDialogue</title>
+  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
