--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">SiteDialogue <span style='font-size:100px;'>&#129302;&#128119;</span></h1>
+            <h1 class="title is-1 publication-title">SiteDialogue &#129302;&#128279;&#128119;</h1>
             <div class="is-size-5 publication-authors">
 
             </div>
